2005-03-21  Kazu Hirata  <kazu@cs.umass.edu>

	* config/i860/i860.h (PREDICATE_CODES): Remove nonexistent
	predicates.

2005-03-21  Richard Sandiford  <rsandifo@redhat.com>

	* config/ip2k/ip2k.h (target_flags, TARGET_SWITCHES): Delete.

2005-03-21  Richard Sandiford  <rsandifo@redhat.com>

	* config/fr30/fr30.h (TARGET_SMALL_MODEL_MASK, TARGET_SMALL_MODEL)
	(TARGET_DEFAULT, target_flags, TARGET_SWITCHES): Delete.
	* config/fr30/fr30.opt: New file.

2005-03-18  Daniel Berlin  <dberlin@dberlin.org>
	
	Fix PR tree-optimization/20542

	* tree-flow-inline.h (overlap_subvar): Move to here.
	* tree-ssa-operands.c: From here.
	* tree-flow.h (overlap_subvar): Declare.
	* tree-ssa-alias.c (add_pointed_to_var): Use overlap_subvar here.
	* tree-ssa-loop-im.c (is_call_clobbered_ref): Return proper answer
	for variables with subvars.
	
2005-03-21 Mostafa Hagog <mustafa@il.ibm.com>

	PR middle-end/20177
	* ddg.c (create_ddg_dependence): Ignore reg-anti dependency.
	* modulo-sched.c (const_iteration_count): Return on NULL
	pre-header.
	(print_node_sched_params): Return on NULL dump_file.
	(generate_reg_moves): Handle reg-anti dependencies and disregard
	closing branch when generating register moves.
	(sms_schedule): Mark the SMSed block dirty.
	* passes.c (rest_of_handle_sms): Call update_life_info for all
	basic-blocks.
	* testsuite/gcc.dg/20050321-1.c: New test.

2005-03-21  Bob Wilson  <bob.wilson@acm.org>

	* config/xtensa/lib1funcs.asm (__mulsi3): Use symbolic name for ACCLO.
	* config/xtensa/xtensa.md (movsi_internal, movhi_internal,
	movqi_internal): Likewise.

2005-03-21  Bob Wilson  <bob.wilson@acm.org>

	* config/xtensa/xtensa-protos.h: (xtensa_simm7, xtensa_uimm8,
	xtensa_uimm8x2, xtensa_uimm8x4, xtensa_ai4const, xtensa_lsi4x4,
	xtensa_b4const): Delete prototypes.
	(xtensa_simm8, xtensa_simm8x256, xtensa_simm12b, xtensa_b4constu,
	xtensa_mask_immediate, xtensa_mem_offset): Update prototypes.
	(xtensa_b4const_or_zero, xtensa_const_ok_for_letter_p,