@@ -2047,24 +2047,15 @@ duplicate_computed_gotos (void)
 	  int size = 0;
 
 	  FOR_BB_INSNS (bb, insn)
-	    {
-	      if (INSN_P (insn))
-		{
-		  /* If the insn isn't copyable, don't duplicate
-		     the block.  */
-		  if (targetm.cannot_copy_insn_p
-		      && targetm.cannot_copy_insn_p (insn))
-		    {
-		      size = max_size + 1;
-		      break;
-		    }
-		  size += get_attr_length (insn);
-		}
-	      if (size > max_size)
-		break;
-	    }
+	    if (INSN_P (insn))
+	      {
+		size += get_attr_length (insn);
+		if (size > max_size)
+		  break;
+	      }
 
-	  if (size <= max_size)
+	  if (size <= max_size
+	      && can_duplicate_block_p (bb))
 	    bitmap_set_bit (candidates, bb->index);
 	}
     }
